Add timezone support + update dependancies

--- a/src/options.html
+++ b/src/options.html
@@ -17,14 +17,18 @@
       <input type="text" id="tabTitle">
     </p>
     <p>
+      <label for="timezone">Timezone</label>
+      <input type="text" id="timezone">
+    </p>
+    <p>
       <label for="clockEnabled">Clock Enabled?</label>
       <input type="checkbox" id="clockEnabled">
     </p>
     <p>
       <label for="clockFmt">Clock format</label>
       <input type="text" id="clockFmt">
-      <p>Preview</p>
-      <p id="clockFmt-prev"></p>
+      <!-- <p>Preview</p>
+      <p id="clockFmt-prev"></p> -->
     </p>
     <p>
       <label for="clockEnabled">Sub Enabled?</label>
@@ -33,8 +37,8 @@
     <p>
       <label for="clockFmt">Sub format</label>
       <input type="text" id="subFmt">
-      <p>Preview</p>
-      <p id="clockFmt-prev"></p>
+      <!-- <p>Preview</p>
+      <p id="clockFmt-prev"></p> -->
     </p>
     <p>
       <label for="invertColours">Invert Colours?</label>
